--- a/ElderlyCarePlatform.Application/ElderlyCarePlatform.Application.csproj
+++ b/ElderlyCarePlatform.Application/ElderlyCarePlatform.Application.csproj
@@ -9,6 +9,9 @@
   <ItemGroup>
     <Folder Include="Interfaces\" />
     <Folder Include="Common\" />
+    <Folder Include="Common\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Repositories\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
 
