--- a/ElderlyCarePlatform.Web/ElderlyCarePlatform.Web.csproj
+++ b/ElderlyCarePlatform.Web/ElderlyCarePlatform.Web.csproj
@@ -8,9 +8,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ElderlyCarePlatform.Application\ElderlyCarePlatform.Application.csproj" />
+    <ProjectReference Include="..\ElderlyCarePlatform.Insfrastructure\ElderlyCarePlatform.Insfrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Data\" />
     <Folder Include="Data\" />
   </ItemGroup>
 
