--- a/ElderlyCarePlatform.Web/appsettings.json
+++ b/ElderlyCarePlatform.Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultSQLConnection": "Server=LAPTOP-S4LNPJSG\\ANTNTMSSQL;Database=Health_Tracking;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultSQLConnection": "Server=LAPTOP-S4LNPJSG\\ANTNTMSSQL;Database=Health_Tracking;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
